REspnsive bugs. Transition webkit and ADAS icons overflow

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -9831,6 +9831,16 @@ html, body {
   margin-top: 60px;
   transform: translateX(250px);
   transition: transform 250ms ease-in-out;
+  -webkit-transition: -webkit-transform 250ms ease-in-out;
+  /* Chrome < 26, Safari < 7 */
+  -moz-transition: -moz-transform 250ms ease-in-out;
+  /* Firefox < 16 */
+  -o-transition: -o-transform 250ms ease-in-out;
+  /* Opera < 12.10 */
+  transition: -webkit-transform 250ms ease-in-out;
+  /* Chrome 26-35, Safari, Opera 15-23 */
+  transition: transform 250ms ease-in-out;
+  /* IE10+, Firefox 16+, Chrome 36+, Opera 12.10 */
   background: #fff; }
 
 .menu {
@@ -9861,7 +9871,16 @@ html, body {
   width: 20%; }
 
 .menu__link-underline {
+  -webkit-transition: -webkit-width 0.4s ease;
+  /* Chrome < 26, Safari < 7 */
+  -moz-transition: -moz-width 0.4s ease;
+  /* Firefox < 16 */
+  -o-transition: -o-width 0.4s ease;
+  /* Opera < 12.10 */
+  transition: -webkit-width 0.4s ease;
+  /* Chrome 26-35, Safari, Opera 15-23 */
   transition: width 0.4s ease;
+  /* IE10+, Firefox 16+, Chrome 36+, Opera 12.10 */
   width: 0%;
   margin-top: 2px;
   border-top: 0.5px solid #1b84ed;
@@ -9879,7 +9898,16 @@ html, body {
 
 .menu__icon-body {
   position: static;
+  -webkit-transition: -webkit-all 0.3s;
+  /* Chrome < 26, Safari < 7 */
+  -moz-transition: -moz-all 0.3s;
+  /* Firefox < 16 */
+  -o-transition: -o-all 0.3s;
+  /* Opera < 12.10 */
+  transition: -webkit-all 0.3s;
+  /* Chrome 26-35, Safari, Opera 15-23 */
   transition: all 0.3s;
+  /* IE10+, Firefox 16+, Chrome 36+, Opera 12.10 */
   height: auto;
   width: 22px;
   z-index: 99;
@@ -11026,6 +11054,7 @@ html, body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  overflow-x: hidden;
   padding: 50px 0; }
 
 .banner-drivesafe .banner-drivesafe__sensors-cont .icons-container .icon {
