--- a/app/scss/custom/views/_machine-learning.scss
+++ b/app/scss/custom/views/_machine-learning.scss
@@ -236,6 +236,7 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        overflow-x: hidden;
         padding: 50px 0;
         .icon {
           width: 70px;
